website/versioned_docs/version-0.8.24/maintainers/docs-site.md
---
title: Maintainer Overview
description: Repo-specific maintenance checklist for the llamadart docs site, releases, and verification flow.
---

This section is for `llamadart` maintainers, not general Docusaurus usage.

## Repository ownership map

- `llamadart` (this repo): Dart API surface, hooks integration, docs/tests.
- `llamadart-native`: native build graph, runtime bundle matrix, release assets.
- `llama-web-bridge`: web bridge runtime source/build behavior.
- `llama-web-bridge-assets`: published bridge artifacts consumed by this repo.

## Local maintainer workspace convention

Many maintainers keep sibling checkouts one level above this repo:

```text
../llamadart
../llamadart-native
../llama-web-bridge
../llama-web-bridge-assets
```

Verify these paths before running cross-repo workflows.

## Core maintainer responsibilities in this repo

1. Keep public Dart APIs stable and documented.
2. Keep runtime wiring aligned with native/web owning repos.
3. Keep docs, migration notes, and examples aligned to actual behavior.
4. Keep CI green on format, analyze, tests, and docs checks.

## Daily verification commands

From repo root:

```bash
dart run tool/prepare_workspace.dart
dart format --output=none --set-exit-if-changed .
dart analyze
dart test
./tool/docs/build_site.sh
./tool/docs/validate_links.sh
```

Preparation resolves the root package and every maintained example. It also
fails if any example or companion package is missing or unclassified. The root
analyzer covers the root package and examples; companion packages own separate
dependency, analysis, test, SwiftPM, and publish-validation lanes. Generated
`.dart_tool`, `build`, CocoaPods `Pods`, Flutter platform `ephemeral`, and
plugin `.symlinks` trees are not workspace packages. Vendored, archived docs,
or local-only trees outside `example/` and `packages/` are not discovered by
the workspace bootstrap.

Use the Flutter SDK pinned in `.flutter-version` (`3.47.1`), the same version
CI installs, for repository-wide quality gates. Other Dart formatters produce
different source layouts even after the same dependency bootstrap.

Use targeted test commands when iterating quickly, then run full checks before
release-related merges.

## Analytics and SEO maintenance

- Global GA4 tracking is configured in `website/docusaurus.config.ts` and reads
  `DOCS_GA_MEASUREMENT_ID` from the docs deployment workflow.
- Update the GitHub Actions repository variable
  `DOCS_GA_MEASUREMENT_ID` when rotating the docs site's GA4 stream.
- Keep `website/static/robots.txt`, sitemap generation, and the social card in
  sync with the production domain `https://llamadart.leehack.com`.
- Latest stable user-facing docs stay indexable, `/docs/next` plus archived
  versions are `noIndex`, and maintainer pages are listed under Help &
  Reference for contributors.
- The navbar version dropdown switches between the current development docs
  and every published version in `website/versions.json`. After a docs cut,
  verify it opens the matching latest and archived installation pages without
  changing their package pins or the latest-stable default route.
